<resources>
    <string name="app_name">Irrigation System</string>
    <string name="action_quit">Quit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_menu_label">Main Menu</string>
    <string name="graphs_label">Graphs</string>
    <string name="live_view_label">Live View</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="graphs">Graphs</string>
    <string name="controls">Controls</string>
    <string name="live_view">Live View</string>
    <string name="loading_value">Loading...</string>
    <string name="TODO">TODO: Implement </string>
    <string name="water_level_label">Water Level</string>
    <string name="soil_moisture_label">Soil Moisture Level</string>
    <string name="temperature_label">Temperature</string>
    <string name="humidity_label">Humidity</string>
    <string name="save_values_btn">Save Values</string>
    <string name="manual_water_btn">Start Pump</string>
    <string name="min_water_value">200</string>
    <string name="max_water_value">600</string>
    <string name="main_controls_label">Water Pump Controls</string>
    <string name="min_water_label">Start Pump At</string>
    <string name="max_water_label">Stop Pump At</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>