<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Controls">

    <Button
        android:id="@+id/SaveValuesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_values_btn"
        app:layout_constraintTop_toBottomOf="@id/MaxWaterValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/ManualWateringBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_water_btn"
        app:layout_constraintTop_toBottomOf="@id/SaveValuesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/MinWaterValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|textPersonName"
        android:text="@string/min_water_value"
        app:layout_constraintTop_toBottomOf="@id/MinLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/MaxWaterValue"
        android:layout_marginTop="16dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/MaxWaterValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|textPersonName"
        android:text="@string/max_water_value"
        app:layout_constraintTop_toBottomOf="@id/MaxLabel"
        app:layout_constraintStart_toEndOf="@id/MinWaterValue"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/MaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_water_label"
        app:layout_constraintTop_toBottomOf="@id/ControlsMainLabel"
        app:layout_constraintStart_toEndOf="@id/MinLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/MinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_water_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ControlsMainLabel"
        app:layout_constraintEnd_toStartOf="@id/MaxLabel"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/ControlsMainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_controls_label"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>